--- a/textlingo-desktop/src/locales/ja.json
+++ b/textlingo-desktop/src/locales/ja.json
@@ -427,5 +427,11 @@
     "next": "次へ",
     "back": "戻る",
     "finish": "システムに入る"
+  },
+  "update": {
+    "title": "アップデート",
+    "description": "新しいバージョン {{version}} が利用可能です。",
+    "action": "今すぐ更新",
+    "dismiss": "閉じる"
   }
 }
