--- a/textlingo-desktop/src/locales/zh.json
+++ b/textlingo-desktop/src/locales/zh.json
@@ -445,5 +445,16 @@
     "description": "新版本 {{version}} 现已发布，包含多项优化和改进。",
     "action": "立即更新",
     "dismiss": "忽略"
+  },
+  "pdfTranslate": {
+    "button": "翻译全文",
+    "translating": "翻译中...",
+    "success": "PDF翻译完成！\n\n纯译文: {{mono}}\n双语对照: {{dual}}",
+    "error": "翻译失败: {{error}}",
+    "noActiveModel": "请先在设置中配置并激活一个AI模型",
+    "viewDual": "查看双语对照",
+    "viewMono": "查看纯译文",
+    "dual": "双语",
+    "mono": "译文"
   }
 }
